[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 6.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "APScheduler"
description = "In-process task scheduler with Cron-like capabilities"
readme = "README.rst"
authors = [{name = "Alex Grönholm", email = "alex.gronholm@nextday.fi"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["scheduling", "cron"]
license = {text = "MIT"}
requires-python = ">= 3.9"
dependencies = [
    "anyio ~= 4.0",
    "attrs >= 22.1",
    "tenacity >= 8.0, < 10.0",
    "tzlocal >= 3.0",
    "typing_extensions >= 4.0; python_version < '3.11'"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://apscheduler.readthedocs.io/en/master/"
Changelog = "https://apscheduler.readthedocs.io/en/master/versionhistory.html"
"Source code" = "https://github.com/agronholm/apscheduler"
"Issue tracker" = "https://github.com/agronholm/apscheduler/issues"

[project.optional-dependencies]
asyncpg = ["asyncpg >= 0.20"]
cbor = ["cbor2 >= 5.0"]
mongodb = ["pymongo >= 4"]
mqtt = ["paho-mqtt >= 2.0"]
redis = ["redis >= 5.0.1"]
sqlalchemy = ["sqlalchemy[asyncio] >= 2.0.24"]
test = [
    "APScheduler[cbor,mongodb,mqtt,redis,sqlalchemy]",
    "asyncpg >= 0.20; python_implementation == 'CPython' and python_version < '3.13'",
    "aiosqlite >= 0.19",
    "anyio[trio]",
    "asyncmy >= 0.2.5; python_implementation == 'CPython'",
    "coverage >= 7",
    "psycopg[binary]",
    "pymongo >= 4",
    "pymysql[rsa]",
    "PySide6 >= 6.6; python_implementation == 'CPython' and python_version < '3.13'",
    "pytest >= 7.4",
    "pytest-lazy-fixtures",
    "pytest-mock",
    "time-machine >= 2.13.0; python_implementation == 'CPython'",
    """\
    uwsgi <= 2.0.26; python_implementation == 'CPython' and platform_system == 'Linux'\
    and python_version < '3.13'\
    """,
]
doc = [
    "sphinx",
    "sphinx-autodoc-typehints >= 2.2.3",
    "sphinx-rtd-theme >= 1.3.0",
    "sphinx-tabs >= 3.3.1",
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
addopts = "-rsx --tb=short"
testpaths = "tests"
filterwarnings = "always"
markers = [
    "external_service: marks tests as requiring some external service",
]

[tool.coverage.run]
source = ["apscheduler"]

[tool.coverage.report]
show_missing = true

[tool.ruff.lint]
extend-select = [
    "ASYNC",        # flake8-async
    "G",            # flake8-logging-format
    "I",            # isort
    "ISC",          # flake8-implicit-str-concat
    "PGH",          # pygrep-hooks
    "RUF",          # ruff specific rules
    "UP",           # pyupgrade
    "W",            # pycodestyle warnings
]
ignore = [
    "RUF001",
    "RUF002",
]

[tool.ruff.lint.isort]
known-first-party = ["apscheduler"]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disable_error_code = "type-abstract"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, py312, py313, pypy3
skip_missing_interpreters = true
minversion = 4.0

[testenv]
extras = test
package = editable
commands = coverage run -m pytest {posargs}

[testenv:pypy3]
commands = pytest {posargs}

[testenv:pyright]
deps = pyright
commands = pyright --verifytypes apscheduler

[testenv:docs]
extras = doc
commands = sphinx-build -W -n docs build/sphinx
"""
