[metadata]
name = APScheduler
description = In-process task scheduler with Cron-like capabilities
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
url = https://github.com/agronholm/apscheduler
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = scheduling cron
license = MIT

[options]
packages = find:
python_requires = >= 3.7
install_requires =
    anyio ~= 3.0
    attrs >= 20.1
    backports.zoneinfo; python_version < '3.9'
    tzdata; platform_system == "Windows"
    tzlocal >= 3.0

[options.extras_require]
cbor = cbor2 >= 5.0
mongodb = pymongo >= 3.12
postgresql = asyncpg >= 0.20
sqlalchemy = sqlalchemy >= 1.4.22
test =
    coverage
    freezegun == 1.0.0
    pytest >= 5.0
    pytest-cov
    pytest-freezegun
    pytest-mock
    trio
doc =
    sphinx
    sphinx-rtd-theme

[flake8]
max-line-length = 99
