[metadata]
name = APScheduler
description = In-process task scheduler with Cron-like capabilities
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
url = https://github.com/agronholm/apscheduler
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = scheduling cron
license = MIT

[options]
package_dir=
    = src
packages = find:
python_requires = >= 3.7
install_requires =
    anyio ~= 3.0
    attrs >= 21.3
    tenacity ~= 8.0
    tzlocal >= 3.0

[options.packages.find]
where = src

[options.package_data]
apscheduler = py.typed

[options.extras_require]
asyncpg = asyncpg >= 0.20
cbor = cbor2 >= 5.0
mongodb = pymongo >= 4
mqtt = paho-mqtt >= 1.5
redis = redis >= 4.0
sqlalchemy = sqlalchemy >= 1.4.22
test =
    asyncpg >= 0.20
    cbor2 >= 5.0
    coverage
    freezegun
    paho-mqtt >= 1.5
    psycopg2
    pymongo >= 4
    pymysql[rsa]
    pytest >= 5.0
    pytest-cov
    pytest-freezegun
    pytest-lazy-fixture
    pytest-mock
    redis[hiredis] >= 4.0
    sqlalchemy >= 1.4.22
    trio
doc =
    sphinx
    sphinx-rtd-theme
